last update for the day

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -16,8 +16,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.pipeline import *"
+    "from src.pipeline import *\n",
+    "import src.key_reader as kr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'value1'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kr.key()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
