'commiting today's work'

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import warnings\n",
+    "random.seed(42)\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anotherjonlee/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (56,57,58,59) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (56,57,58,59) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -54,7 +66,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'participantId', 'win', 'item0', 'item1', 'item2',\n",
+       "       'item3', 'item4', 'item5', 'item6', 'kills', 'deaths', 'assists',\n",
+       "       'largestKillingSpree', 'largestMultiKill', 'killingSprees',\n",
+       "       'longestTimeSpentLiving', 'doubleKills', 'tripleKills', 'quadraKills',\n",
+       "       'pentaKills', 'unrealKills', 'totalDamageDealt', 'magicDamageDealt',\n",
+       "       'physicalDamageDealt', 'trueDamageDealt', 'largestCriticalStrike',\n",
+       "       'totalDamageDealtToChampions', 'magicDamageDealtToChampions',\n",
+       "       'physicalDamageDealtToChampions', 'trueDamageDealtToChampions',\n",
+       "       'totalHeal', 'totalUnitsHealed', 'damageSelfMitigated',\n",
+       "       'damageDealtToObjectives', 'damageDealtToTurrets', 'visionScore',\n",
+       "       'timeCCingOthers', 'totalDamageTaken', 'magicalDamageTaken',\n",
+       "       'physicalDamageTaken', 'trueDamageTaken', 'goldEarned', 'goldSpent',\n",
+       "       'turretKills', 'inhibitorKills', 'totalMinionsKilled',\n",
+       "       'neutralMinionsKilled', 'neutralMinionsKilledTeamJungle',\n",
+       "       'neutralMinionsKilledEnemyJungle', 'totalTimeCrowdControlDealt',\n",
+       "       'champLevel', 'visionWardsBoughtInGame', 'sightWardsBoughtInGame',\n",
+       "       'wardsPlaced', 'wardsKilled', 'firstBloodKill', 'firstBloodAssist',\n",
+       "       'firstTowerKill', 'firstTowerAssist', 'firstInhibitorKill',\n",
+       "       'firstInhibitorAssist', 'combatPlayerScore', 'objectivePlayerScore',\n",
+       "       'totalPlayerScore', 'totalScoreRank', 'playerScore0', 'playerScore1',\n",
+       "       'playerScore2', 'playerScore3', 'playerScore4', 'playerScore5',\n",
+       "       'playerScore6', 'playerScore7', 'playerScore8', 'playerScore9',\n",
+       "       'highestAchievedSeasonTier', 'role', 'lane'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seed_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +120,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,164 +131,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "firstInhibitorAssist              780\n",
-       "firstInhibitorKill                780\n",
-       "firstTowerKill                    290\n",
-       "firstTowerAssist                  290\n",
-       "firstBloodAssist                  130\n",
-       "firstBloodKill                    130\n",
-       "physicalDamageDealtToChampions      0\n",
-       "pentaKills                          0\n",
-       "tripleKills                         0\n",
-       "damageSelfMitigated                 0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seed_df.isnull().sum().sort_values(ascending=False)[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_separator(df):\n",
-    "    numeric_features = []\n",
-    "    cat_features = []\n",
+    "num_features,cat_features = feature_separator(seed_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(num_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cat_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_pipeline = pipeline(True,num_features,True,cat_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier, AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = append_model(LogisticRegression(),base_pipeline)\n",
+    "rfc = append_model(RandomForestClassifier(),base_pipeline)\n",
+    "gbc = append_model(GradientBoostingClassifier(),base_pipeline)\n",
+    "abc = append_model(AdaBoostClassifier(),base_pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seed_df.win.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "    for col in df.columns[3:]:\n",
-    "        if df[col].dtype == 'int64':\n",
-    "            numeric_features.append(col)\n",
-    "        else:\n",
-    "            cat_features.append(col)\n",
-    "    return numeric_features,cat_features"
+    "X = seed_df.iloc[:,3:]\n",
+    "\n",
+    "y = 1.0 * seed_df['win']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['firstBloodKill',\n",
-       " 'firstBloodAssist',\n",
-       " 'firstTowerKill',\n",
-       " 'firstTowerAssist',\n",
-       " 'firstInhibitorKill',\n",
-       " 'firstInhibitorAssist',\n",
-       " 'highestAchievedSeasonTier',\n",
-       " 'role',\n",
-       " 'lane']"
+       "0.885"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat_features"
+    "cross_val_score(lr,X_train,y_train).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['item0',\n",
-       " 'item1',\n",
-       " 'item2',\n",
-       " 'item3',\n",
-       " 'item4',\n",
-       " 'item5',\n",
-       " 'item6',\n",
-       " 'kills',\n",
-       " 'deaths',\n",
-       " 'assists',\n",
-       " 'largestKillingSpree',\n",
-       " 'largestMultiKill',\n",
-       " 'killingSprees',\n",
-       " 'longestTimeSpentLiving',\n",
-       " 'doubleKills',\n",
-       " 'tripleKills',\n",
-       " 'quadraKills',\n",
-       " 'pentaKills',\n",
-       " 'unrealKills',\n",
-       " 'totalDamageDealt',\n",
-       " 'magicDamageDealt',\n",
-       " 'physicalDamageDealt',\n",
-       " 'trueDamageDealt',\n",
-       " 'largestCriticalStrike',\n",
-       " 'totalDamageDealtToChampions',\n",
-       " 'magicDamageDealtToChampions',\n",
-       " 'physicalDamageDealtToChampions',\n",
-       " 'trueDamageDealtToChampions',\n",
-       " 'totalHeal',\n",
-       " 'totalUnitsHealed',\n",
-       " 'damageSelfMitigated',\n",
-       " 'damageDealtToObjectives',\n",
-       " 'damageDealtToTurrets',\n",
-       " 'visionScore',\n",
-       " 'timeCCingOthers',\n",
-       " 'totalDamageTaken',\n",
-       " 'magicalDamageTaken',\n",
-       " 'physicalDamageTaken',\n",
-       " 'trueDamageTaken',\n",
-       " 'goldEarned',\n",
-       " 'goldSpent',\n",
-       " 'turretKills',\n",
-       " 'inhibitorKills',\n",
-       " 'totalMinionsKilled',\n",
-       " 'neutralMinionsKilled',\n",
-       " 'neutralMinionsKilledTeamJungle',\n",
-       " 'neutralMinionsKilledEnemyJungle',\n",
-       " 'totalTimeCrowdControlDealt',\n",
-       " 'champLevel',\n",
-       " 'visionWardsBoughtInGame',\n",
-       " 'sightWardsBoughtInGame',\n",
-       " 'wardsPlaced',\n",
-       " 'wardsKilled',\n",
-       " 'combatPlayerScore',\n",
-       " 'objectivePlayerScore',\n",
-       " 'totalPlayerScore',\n",
-       " 'totalScoreRank',\n",
-       " 'playerScore0',\n",
-       " 'playerScore1',\n",
-       " 'playerScore2',\n",
-       " 'playerScore3',\n",
-       " 'playerScore4',\n",
-       " 'playerScore5',\n",
-       " 'playerScore6',\n",
-       " 'playerScore7',\n",
-       " 'playerScore8',\n",
-       " 'playerScore9']"
+       "0.8855000000000001"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numeric_features"
+    "cross_val_score(lr,X_train,y_train).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8648"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(rfc,X_train,y_train).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.873"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(gbc,X,y).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8651"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(abc,X,y).mean()"
    ]
   },
   {
@@ -246,9 +364,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('anaconda3': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37464bitanaconda3virtualenvbb2bdea6b5cc4aacbbb9d6509d246b8e"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -260,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
